Talk (mostly) written.

--- a/index.html
+++ b/index.html
@@ -35,21 +35,138 @@
 <section data-markdown data-separator-notes="^Notes:">
 ## OSR: A History
 
+* First grown in the UK in the 13th century
+* Increased with industrial revolution
+* Major Crop in the 1960's
+
+
+![](img/oil-lamp.jpg) ![](img/soap.jpg) ![](img/marg.png)
+
 Notes:
-* OSR grown for thousands of years in far-east
-* Oil predominantly used for illumination and fuel from the 13th century
-* Took off with industrial revolution for soap, lubricants
-* Significant food use from 1960s with move from butter to margarine
-* Erucic acid discovered - heart attacks!
-* Fixed with Canola
-* Byproducts no good for animal feed due to glucosinolates
-* Glucosinolate-free strains now exist.
-* Third largest oil source after Soybean and Palm, 2nd  largest animal feed after Soybean
+* Third biggest oil-producing crop in the world (after soybean and palm)
 </section>
 
 
 <section data-markdown data-separator-notes="^Notes:">
 <script type="text/template">
+## But...
+
+* Contains Erucic Acid
+ * causes heart attacks
+* Contains Glucosinolates
+ * Causes deformities and weightloss
+
+![](img/danger-death.gif)
+</script>
+</section>
+
+<section data-markdown data-separator-notes="^Notes:">
+<script type="text/template">
+## Canola
+
+* Developed by Canadian Plant Breeders
+ * Low levels of Erucic Acid and Glucosinolates
+* Increased crop usefulness
+* All OSR today is Canola (or similar varieties)
+
+![](img/canola.jpg)
+</script>
+</section>
+
+<section data-markdown data-separator-notes="^Notes:">
+<script type="text/template">
+## OSR in West Lothian
+
+![](img/map.jpg)
+
+Notes:
+* Image from June 2016
+* Almost exclusively Winter OSR
+* Flowers in May
+* Major source of early Nectar and Pollen
+* Finding a site relatively easy in WL
+</script>
+</section>
+
+<section data-markdown data-separator-notes="^Notes:">
+<script type="text/template">
+## Siting Your Hives
+* When to Move Hives
+* Access
+* Position
+* Farmer's Requirements
+* Security
+
+![](img/hives.jpg)
+
+Notes:
+* Most places in WL are within 2-3 miles of OSR fields
+* Autumn or Spring (mid-April) - depending on forage and conditions
+* Move just before or just after flow begins
+* Field access is key for movement and management -heavy supers!
+* Crops can swamp hives. Field margins are safest
+* Talk to the farmer, even if not moving your hives!
+
+</script>
+</section>
+
+<section data-markdown data-separator-notes="^Notes:">
+<script type="text/template">
+## Hive Management
+
+![](img/swarming.jpg) ![](img/spraying.jpg) ![](img/supers.jpg)
+
+Notes:
+* Swarming
+  * Clipped Qs, Snelgrove-esque approach (Murray McGregor)
+	* Bait hives
+* Spraying
+  * Liaise with farmers about their spray regimes
+  * Fungicides and herbicides can affect bees
+* Supers
+  * Start with 2, preferably 3
+	* Shake test - swap out (and move around) on every visit.
+	* Extract ASAP! (Or keep above 25C, below 4C)
+</script>
+</section>
+
+<section data-markdown data-separator-notes="^Notes:">
+<script type="text/template">
+## Honey Processing
+
+1. Strain into Buckets
+2. Leave to Set Hard.
+3. Warm to 34&deg;C
+4. Cream the Honey
+5. Jar while warm
+
+![](img/warming-cabinet.jpg) ![](img/drill-mixer.jpg)
+
+Notes:
+* Fine to process at the end of the season
+* Setting happens fastest at 14C
+* Warm just enough to get it moving - not liquid!
+* May take 24-48 hours to warm and soften
+* Don't incorporate air into the Honey
+* Process in small batches into warm jars
+</script>
+</section>
+
+<section data-markdown data-separator-notes="^Notes:">
+<script type="text/template">
+## Further Thoughts
+
+* Solid supers
+* Reusing OSR supers
+* Dyce Method
+* Drawing Comb
+
+Notes:
+* Solid: melt down (wax and bakers honey) OR wash out (mead/feed)
+* In a good year you can get 2 extractions out of the supers
+* Reuse can cause crystallisation. Wash or use different supers
+* Dyce method NOT needed for pure OSR - for coarse crystal honeys
+* OSR is great for drawing comb - especially for cut comb
 </script>
 </section>
 
