Improve map colour, update notes.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@ Notes:
 * Move just before or just after flow begins
 * Field access is key for movement and management -heavy supers!
 * Crops can swamp hives. Field margins are safest
-* Talk to the farmer, even if not moving your hives!
+* Nearby farm yards, industrial units, etc?
+* Talk to the farmer, even if not moving your hives into their fields!
 
 </script>
 </section>
