Update slides and notes.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Beekeeping and Oilseed Rape</title>
+		<title>Beekeeping on Oilseed Rape</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/solarized_improved.css">
@@ -26,24 +26,25 @@
 			<div class="slides">
 
 <section data-markdown data-separator-notes="^Notes:">
-## Beekeeping and Oilseed Rape
+## Beekeeping on Oilseed Rape
 ![](img/osr.jpg)
 #### Matthew Richardson - 9 December 2019
 </section>
 
 
 <section data-markdown data-separator-notes="^Notes:">
-## OSR: A History
+## History of OSR
 
+* Native to the Middle/Far East
 * First grown in the UK in the 13th century
 * Increased with industrial revolution
 * Major Crop in the 1960's
-
 
 ![](img/oil-lamp.jpg) ![](img/soap.jpg) ![](img/marg.png)
 
 Notes:
 * Third biggest oil-producing crop in the world (after soybean and palm)
+* Used as a lubricant, soap-making, food crop
 </section>
 
 
@@ -57,19 +58,22 @@ Notes:
  * Causes deformities and weightloss
 
 ![](img/danger-death.gif)
+
 </script>
 </section>
 
 <section data-markdown data-separator-notes="^Notes:">
 <script type="text/template">
-## Canola
+## CANOLA
 
 * Developed by Canadian Plant Breeders
- * Low levels of Erucic Acid and Glucosinolates
+ * Low levels of Erucic Acid (and Glucosinolates)
 * Increased crop usefulness
 * All OSR today is Canola (or similar varieties)
 
 ![](img/canola.jpg)
+
+* CANadian Oilseed Low Acid
 </script>
 </section>
 
@@ -82,15 +86,36 @@ Notes:
 Notes:
 * Image from June 2016
 * Almost exclusively Winter OSR
-* Flowers in May
+* Flowers in May (usually!)
 * Major source of early Nectar and Pollen
-* Finding a site relatively easy in WL
+* Finding a site relatively easy
+</script>
+</section>
+
+
+<section data-markdown data-separator-notes="^Notes:">
+<script type="text/template">
+## Preparations
+
+* Autumn/Winter
+ * Varroa Treatment
+ * Feed Colonies Well
+* Spring
+ * Feed Pollen Early
+ * Feed Syrup/Fondant (*only if* low)
+ * Single Brood Box
+
+Notes:
+* Single brood more practical, wasted space, remove old frames
+* Pollen = Brood = Foragers. Feed 6 weeks before flow.
+* Syrup = chilling, honey bound colonies
 </script>
 </section>
 
 <section data-markdown data-separator-notes="^Notes:">
 <script type="text/template">
 ## Siting Your Hives
+
 * When to Move Hives
 * Access
 * Position
@@ -119,15 +144,16 @@ Notes:
 
 Notes:
 * Swarming
-  * Clipped Qs, Snelgrove-esque approach (Murray McGregor)
-	* Bait hives
+  * Clipped Qs
+  * Snelgrove (1-2 brood frames down) OR queen in a nuc (cycle empty/full brood weekly)
+  * Bait hives
 * Spraying
   * Liaise with farmers about their spray regimes
   * Fungicides and herbicides can affect bees
 * Supers
-  * Start with 2, preferably 3
-	* Shake test - swap out (and move around) on every visit.
-	* Extract ASAP! (Or keep above 25C, below 4C)
+  * Minimum 2, preferably 3
+  * Shake test - swap out (and move around) on every visit.
+  * Extract ASAP! (Or keep above 25C OR below 4C)
 </script>
 </section>
 
@@ -172,11 +198,12 @@ Notes:
 </section>
 
 <section data-markdown data-separator-notes="^Notes:">
-## Further Info
+## Any Questions?
 
 #### matt@woodwose.net
 
-#### Talk Slides:
+#### Talk Slides: https://mrichar1.github.io/osr-talk
+#### (Press 's' for Notes)
 
 </section>
 
