--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@ Notes:
 <section data-markdown data-separator-notes="^Notes:">
 ## Any Questions?
 
-#### matt@woodwose.net
+### matt@woodwose.net
 
-#### Talk Slides: https://mrichar1.github.io/osr-talk
+### Talk Slides: https://mrichar1.github.io/osr-talk
 #### (Press 's' for Notes)
 
 </section>
