Misc talk improvements.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <section data-markdown data-separator-notes="^Notes:">
 ## Beekeeping on Oilseed Rape
 ![](img/osr.jpg)
-#### Matthew Richardson - 9 December 2019
+### Matthew Richardson - 9 December 2019
 </section>
 
 
@@ -37,7 +37,6 @@
 
 * Native to the Middle/Far East
 * First grown in the UK in the 13th century
-* Increased with industrial revolution
 * Major Crop in the 1960's
 
 ![](img/oil-lamp.jpg) ![](img/soap.jpg) ![](img/marg.png)
@@ -53,9 +52,10 @@ Notes:
 ## But...
 
 * Contains Erucic Acid
- * causes heart attacks
+ * causes heart attacks  <!-- .element: class="fragment step-fade-in" -->
 * Contains Glucosinolates
- * Causes deformities and weightloss
+ * Causes birth defects &amp; weightloss  <!-- .element: class="fragment step-fade-in" -->
+
 
 ![](img/danger-death.gif)
 
@@ -66,16 +66,31 @@ Notes:
 <script type="text/template">
 ## CANOLA
 
-* Developed by Canadian Plant Breeders
- * Low levels of Erucic Acid (and Glucosinolates)
-* Increased crop usefulness
-* All OSR today is Canola (or similar varieties)
+* Canadian Plant Breeders
+ * Low levels of Erucic Acid and Glucosinolates  <!-- .element: class="fragment step-fade-in" -->
+* CANadian Oilseed Low Acid  <!-- .element: class="fragment step-fade-in" -->
+* 99% of OSR grown today  <!-- .element: class="fragment step-fade-in" -->
 
 ![](img/canola.jpg)
 
-* CANadian Oilseed Low Acid
+
 </script>
 </section>
+
+
+<section data-markdown data-separator-notes="^Notes:">
+<script type="text/template">
+## Pros and Cons
+
+* Abundant Forage <!-- .element: class="fragment step-fade-in tick" -->
+* Early Forage <!-- .element: class="fragment step-fade-in tick" -->
+* Granulates Rapidly!   <!-- .element: class="fragment step-fade-in cross" -->
+* Swarmy Bees   <!-- .element: class="fragment step-fade-in cross" -->
+* Angry Bees   <!-- .element: class="fragment step-fade-in cross" -->
+</script>
+</section>
+
+
 
 <section data-markdown data-separator-notes="^Notes:">
 <script type="text/template">
@@ -99,16 +114,21 @@ Notes:
 
 * Autumn/Winter
  * Varroa Treatment
- * Feed Colonies Well
+ * Winter Feeding
+ * Find a Site
 * Spring
- * Feed Pollen Early
- * Feed Syrup/Fondant (*only if* low)
+ * Spring Feeding
  * Single Brood Box
+ * Drawn Supers
 
 Notes:
-* Single brood more practical, wasted space, remove old frames
-* Pollen = Brood = Foragers. Feed 6 weeks before flow.
-* Syrup = chilling, honey bound colonies
+* Single brood more practical:
+  * Moving
+	* Honey in brood frames
+	* Frame recycling
+* Pollen = Brood = Foragers 6 weeks before flow.
+* Excess syrup = chilled, honey bound colonies
+* General good advice for all Spring flows
 </script>
 </section>
 
@@ -129,6 +149,7 @@ Notes:
 * Autumn or Spring (mid-April) - depending on forage and conditions
 * Move just before or just after flow begins
 * Field access is key for movement and management -heavy supers!
+* Firm standing, hive stands?
 * Crops can swamp hives. Field margins are safest
 * Nearby farm yards, industrial units, etc?
 * Talk to the farmer, even if not moving your hives into their fields!
@@ -140,20 +161,23 @@ Notes:
 <script type="text/template">
 ## Hive Management
 
-![](img/swarming.jpg) ![](img/spraying.jpg) ![](img/supers.jpg)
+![](img/spraying.jpg) ![](img/swarming.jpg) ![](img/supers.jpg)
 
 Notes:
-* Swarming
-  * Clipped Qs
-  * Snelgrove (1-2 brood frames down) OR queen in a nuc (cycle empty/full brood weekly)
-  * Bait hives
 * Spraying
   * Liaise with farmers about their spray regimes
   * Fungicides and herbicides can affect bees
+* Swarming
+  * Clipped Qs
+  * Methods:
+	  * Weaken by splitting out nucs (before moving?)
+	  * Pagden
+	  * Snelgrove (1-2 brood frames down)
+  * Bait hives
 * Supers
   * Minimum 2, preferably 3
   * Shake test - swap out (and move around) on every visit.
-  * Extract ASAP! (Or keep above 25C OR below 4C)
+  * Extract ASAP! (ideally keep above 25C OR below 4C)
 </script>
 </section>
 
@@ -174,7 +198,7 @@ Notes:
 * Setting happens fastest at 14C
 * Warm just enough to get it moving - not liquid!
 * May take 24-48 hours to warm and soften
-* Don't incorporate air into the Honey
+* Don't incorporate air into the honey
 * Process in small batches into warm jars
 </script>
 </section>
@@ -193,7 +217,7 @@ Notes:
 * In a good year you can get 2 extractions out of the supers
 * Reuse can cause crystallisation. Wash or use different supers
 * Dyce method NOT needed for pure OSR - for coarse crystal honeys
-* OSR is great for drawing comb - especially for cut comb
+* OSR is great for drawing comb - but wash supers if used for cut comb!
 </script>
 </section>
 
