--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ Notes:
 				center: false,
 				width: "100%",
 	      height: "100%",
-				controls: false,
+				controls: true,
 				controlsLayout: "edges",
 				history: true,
 				transition: "none",
